bitkeeper revision 1.412.1.1 (3f5dead4Q7H73DU1k60q13_8T8HYbQ)
Makefile Cleanups, added xenolinux-sparse soft link, added NETFILTER to default xenolinux build.

--- a/tools/balloon/Makefile
+++ b/tools/balloon/Makefile
@@ -5,7 +5,8 @@ $(TARGET): balloon.c
 	$(CC) -O2 -Wall -o $(TARGET) balloon.c
 
 install: $(TARGET)
-	cp  $(TARGET) ../../../install/bin
+	mkdir -p ../../../install/bin
+	cp -a $(TARGET) ../../../install/bin
 
 clean:
 	$(RM) *.o $(TARGET) *~
