bitkeeper revision 1.418 (3f5e4b6byRa3v8seHcnM3eDo4lGneA)
Makefile and defconfig cleanups.

--- a/xenolinux-2.4.22-sparse/arch/xeno/Makefile
+++ b/xenolinux-2.4.22-sparse/arch/xeno/Makefile
@@ -96,6 +96,7 @@ bzImage: vmlinux
 	@$(MAKEBOOT) image.gz
 
 install: bzImage
+	mkdir -p ../install/boot
 	cp -a arch/$(ARCH)/boot/image.gz ../install/boot/xenolinux.gz
 
 archclean:
