--- a/xenolinux-2.4.22-sparse/arch/xeno/lib/Makefile
+++ b/xenolinux-2.4.22-sparse/arch/xeno/lib/Makefile
@@ -6,7 +6,7 @@ L_TARGET = lib.a
 
 obj-y = checksum.o old-checksum.o delay.o \
 	usercopy.o getuser.o \
-	memcpy.o strstr.o
+	memcpy.o strstr.o xeno_proc.o
 
 obj-$(CONFIG_X86_USE_3DNOW) += mmx.o
 obj-$(CONFIG_HAVE_DEC_LOCK) += dec_and_lock.o
