bitkeeper revision 1.446 (3f6b44e6GApm2O-HHseM1RBqUJ5DWA)
Use e1000 in preference to e100.

--- a/xen/drivers/net/Makefile
+++ b/xen/drivers/net/Makefile
@@ -5,7 +5,7 @@ default: $(OBJS)
 	$(MAKE) -C tulip
 	$(MAKE) -C e100
 	$(MAKE) -C e1000
-	$(LD) -r -o driver.o e100/e100.o e1000/e1000.o $(OBJS) tulip/tulip.o
+	$(LD) -r -o driver.o e1000/e1000.o $(OBJS) e100/e100.o tulip/tulip.o
 
 clean:
 	$(MAKE) -C tulip clean
