--- a/tools/misc/miniterm/Makefile
+++ b/tools/misc/miniterm/Makefile
@@ -3,5 +3,8 @@ CFLAGS  = -O3 -march=i686 -Wall
 
 all: miniterm
 
+install: all
+	cp -a miniterm ../../../../install/bin/	
+
 clean:
 	rm -f *.o miniterm *~
