bitkeeper revision 1.473 (3f7867e38-w0Udil0euqJ8nAHOdmhQ)
rename bk repository xeno.bk to xeno-1.0.bk

--- a/tools/control/Makefile
+++ b/tools/control/Makefile
@@ -8,6 +8,7 @@ clean: clean-cmdline clean-web
 
 examples: FORCE
 	mkdir -p ../../../install/etc
+	chmod +w ../../../install/etc/*
 	cp examples/xen* examples/*example ../../../install/etc/
 
 cmdline: FORCE
