bitkeeper revision 1.473.1.1 (3f7ae3a1ETOit2XWditIaoMNiR4HLA)
minor fix to xen-clone script

--- a/tools/control/Makefile
+++ b/tools/control/Makefile
@@ -8,7 +8,7 @@ clean: clean-cmdline clean-web
 
 examples: FORCE
 	mkdir -p ../../../install/etc
-	chmod +w ../../../install/etc/*
+	chmod +w ../../../install/etc/* || true
 	cp examples/xen* examples/*example ../../../install/etc/
 
 cmdline: FORCE
