--- a/tools/misc/Makefile
+++ b/tools/misc/Makefile
@@ -7,7 +7,7 @@ HDRS     = $(wildcard *.h)
 SRCS     = $(wildcard *.c)
 OBJS     = $(patsubst %.c,%.o,$(SRCS))
 
-TARGETS  = xen_read_console 
+TARGETS  = xen_read_console xen_refresh_dev
 
 INSTALL  = $(TARGETS) xen-mkdevnodes xen-clone
 
