--- a/xenolinux-2.4.22-sparse/arch/xeno/drivers/block/Makefile
+++ b/xenolinux-2.4.22-sparse/arch/xeno/drivers/block/Makefile
@@ -1,3 +1,3 @@
 O_TARGET := blk.o
-obj-y := xl_block.o xl_ide.o xl_scsi.o xl_segment.o xl_segment_proc.o info.o
+obj-y := xl_block.o xl_ide.o xl_scsi.o xl_vbd.o info.o
 include $(TOPDIR)/Rules.make
