bitkeeper revision 1.567 (3fa98625j0d47oe7ZCKLDdbnYED8wA)
xi_restore_linux.c, xi_save_linux.c:
  new file
dom0_ops.c, Makefile:
  Starting DOM0 support for suspend/resume. Untested so far, and resume is currently incomplete.

--- a/tools/internal/Makefile
+++ b/tools/internal/Makefile
@@ -8,7 +8,7 @@ SRCS     = $(wildcard *.c)
 OBJS     = $(patsubst %.c,%.o,$(SRCS))
 
 TARGETS  = xi_create xi_start xi_stop xi_destroy xi_build 
-TARGETS += xi_phys_grant xi_list 
+TARGETS += xi_phys_grant xi_list xi_save_linux xi_restore_linux
 TARGETS += xi_sched_global xi_sched_domain xi_usage xi_vif_params
 INSTALL  = $(TARGETS) xi_vifinit xi_helper
 
