--- a/tools/misc/Makefile
+++ b/tools/misc/Makefile
@@ -9,7 +9,7 @@ OBJS     = $(patsubst %.c,%.o,$(SRCS))
 
 TARGETS  = xen_read_console xen_log xen_cpuperf xen_refresh_dev
 
-INSTALL  = $(TARGETS) xen-mkdevnodes xen-clone 
+INSTALL  = $(TARGETS) xen-mkdevnodes xen_nat_enable xen-clone 
 
 all: $(TARGETS)
 	$(MAKE) -C miniterm	
