bitkeeper revision 1.576 (3facdede5nZbIb45xqApby8e8U5CQA)
xi_save_linux.c, xi_restore_linux.c, Makefile:
  Suspend/resume now uses zlib to reduce the state file size.

--- a/tools/internal/Makefile
+++ b/tools/internal/Makefile
@@ -12,7 +12,15 @@ TARGETS += xi_phys_grant xi_list xi_save_linux xi_restore_linux
 TARGETS += xi_sched_global xi_sched_domain xi_usage xi_vif_params
 INSTALL  = $(TARGETS) xi_vifinit xi_helper
 
-all: $(TARGETS)
+all: check-for-zlib $(TARGETS)
+
+check-for-zlib:
+	@if [ ! -e /usr/include/zlib.h ]; then \
+	echo "***********************************************************"; \
+	echo "ERROR: install zlib header files (http://www.gzip.org/zlib)"; \
+	echo "***********************************************************"; \
+	false; \
+	fi
 
 install: all
 	mkdir -p ../../../install/bin
@@ -30,6 +38,9 @@ rpm: all
 	rpmbuild --define "staging$$PWD/staging" --define '_builddir.' --define "_rpmdir$$PWD/staging" -bb rpm.spec
 	mv staging/i386/*.rpm .
 	rm -rf staging
+
+xi_save_linux xi_restore_linux: %: %.c $(HDRS) Makefile
+	$(CC) $(CFLAGS) -lz -o $@ $<
 
 %: %.c $(HDRS) Makefile
 	$(CC) $(CFLAGS) -o $@ $<
