--- a/xenolinux-2.4.22-sparse/arch/xeno/Makefile
+++ b/xenolinux-2.4.22-sparse/arch/xeno/Makefile
@@ -93,11 +93,11 @@ FORCE: ;
 .PHONY: bzImage compressed clean archclean archmrproper archdep
 
 bzImage: vmlinux
-	@$(MAKEBOOT) image.gz
+	@$(MAKEBOOT) xenolinux.gz
 
 install: bzImage
 	mkdir -p ../install/boot
-	cp -a arch/$(ARCH)/boot/image.gz ../install/boot/xenolinux.gz
+	cp -a arch/$(ARCH)/boot/xenolinux.gz ../install/boot/xenolinux.gz
 
 archclean:
 	@$(MAKEBOOT) clean
