--- a/xenolinux-2.4.22-sparse/arch/xeno/boot/Makefile
+++ b/xenolinux-2.4.22-sparse/arch/xeno/boot/Makefile
@@ -2,21 +2,21 @@
 # arch/xeno/boot/Makefile
 #
 
-image.gz: image
+xenolinux.gz: xenolinux
 	gzip -f -9 < $< > $@
 
-image: $(TOPDIR)/vmlinux
+xenolinux: $(TOPDIR)/vmlinux
 	# Guest OS header -- first 8 bytes are identifier 'XenoGues'.
 	echo -e -n 'XenoGues' >$@ 
 	# Guest OS header -- next 4 bytes are load address (0xC0000000).
 	echo -e -n '\000\000\000\300' >>$@
-	$(OBJCOPY) $< image.body
+	$(OBJCOPY) $< xenolinux.body
 	# Guest OS header is immediately followed by raw OS image.
 	# Start address must be at byte 0.
-	cat image.body >>$@
-	rm -f image.body
+	cat xenolinux.body >>$@
+	rm -f xenolinux.body
 
 dep:
 
 clean:
-	rm -f image image.gz
+	rm -f xenolinux xenolinux.gz
