--- a/tools/misc/Makefile
+++ b/tools/misc/Makefile
@@ -1,13 +1,13 @@
 
-CC       = gcc
-CFLAGS   = -Wall -O3 
-CFLAGS  += -I../../xen/include -I../../xenolinux-sparse/include -I../internal
+CC        = gcc
+CFLAGS    = -Wall -O3 
+EXTRA_INC = -I../../xen/include -I../../xenolinux-sparse/include -I../internal
 
 HDRS     = $(wildcard *.h)
 SRCS     = $(wildcard *.c)
 OBJS     = $(patsubst %.c,%.o,$(SRCS))
 
-TARGETS  = xen_read_console xen_cpuperf xen_refresh_dev
+TARGETS  = xen_read_console xen_cpuperf xen_refresh_dev xen_netwatch
 
 INSTALL  = $(TARGETS) xen-mkdevnodes xen_nat_enable xen-clone 
 
@@ -25,6 +25,9 @@ clean:
 	$(RM) *.o $(TARGETS)
 	$(MAKE) -C miniterm clean	
 
-%: %.c $(HDRS) Makefile
+xen_netwatch: %: %.c $(HDRS) Makefile
 	$(CC) $(CFLAGS) -o $@ $<
+
+%: %.c $(HDRS) Makefile
+	$(CC) $(CFLAGS) $(EXTRA_INC) -o $@ $<
 
