bitkeeper revision 1.594 (3fb210e1h9kxCYdiaHlo-5FLn1jxLg)
xi_build.c, Makefile:
  xi_build will now accept a gzipped kernel image.

--- a/tools/internal/Makefile
+++ b/tools/internal/Makefile
@@ -40,7 +40,7 @@ rpm: all
 	mv staging/i386/*.rpm .
 	rm -rf staging
 
-xi_save_linux xi_restore_linux: %: %.c $(HDRS) Makefile
+xi_build xi_save_linux xi_restore_linux: %: %.c $(HDRS) Makefile
 	$(CC) $(CFLAGS) -lz -o $@ $<
 
 %: %.c $(HDRS) Makefile
