bitkeeper revision 1.612 (3fbba6e271_EVTI6k2Ndd7VThsLqTA)
Many files:
  new file
Makefile:
  New library (libxi) which makes it easier to access the control interfaces.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -21,17 +21,20 @@ all:
 	$(MAKE) -C balloon
 	$(MAKE) -C control
 	$(MAKE) -C internal
+	$(MAKE) -C libxi
 	$(MAKE) -C misc
 
 install: all
 	$(MAKE) -C balloon install
 	$(MAKE) -C control install
 	$(MAKE) -C internal install
+	$(MAKE) -C libxi install
 	$(MAKE) -C misc install
 
 clean:
 	$(MAKE) -C balloon clean
 	$(MAKE) -C control clean
 	$(MAKE) -C internal clean
+	$(MAKE) -C libxi clean
 	$(MAKE) -C misc clean
 
