--- a/tools/Makefile
+++ b/tools/Makefile
@@ -21,20 +21,20 @@ all:
 	$(MAKE) -C balloon
 	$(MAKE) -C control
 	$(MAKE) -C internal
-	$(MAKE) -C libxi
+	$(MAKE) -C libxc
 	$(MAKE) -C misc
 
 install: all
 	$(MAKE) -C balloon install
 	$(MAKE) -C control install
 	$(MAKE) -C internal install
-	$(MAKE) -C libxi install
+	$(MAKE) -C libxc install
 	$(MAKE) -C misc install
 
 clean:
 	$(MAKE) -C balloon clean
 	$(MAKE) -C control clean
 	$(MAKE) -C internal clean
-	$(MAKE) -C libxi clean
+	$(MAKE) -C libxc clean
 	$(MAKE) -C misc clean
 
