bitkeeper revision 1.615 (3fbc9188pfX4YYzNRqNTu-qQSJS7XA)
aic79xx_osm.h, aic79xx_osm.c, aic79xx_host.h, aic79xx_core.c, Makefile:
  Add aic79xx SCSI support.

--- a/xen/drivers/scsi/aic7xxx/Makefile
+++ b/xen/drivers/scsi/aic7xxx/Makefile
@@ -35,9 +35,14 @@ obj-aic7xxx += aic7xxx_pci.o
 #obj-aic79xx = aic79xx_osm.o 
 #obj-aic79xx += aic79xx_proc.o
 #obj-aic79xx += aic79xx_osm_pci.o
+obj-aic7xxx += aic79xx_osm.o 
+obj-aic7xxx += aic79xx_proc.o
+obj-aic7xxx += aic79xx_osm_pci.o
 # Core Files
 #obj-aic79xx += aic79xx_core.o
 #obj-aic79xx += aic79xx_pci.o
+obj-aic7xxx += aic79xx_core.o
+obj-aic7xxx += aic79xx_pci.o
 
 default: aic7xxx.o
 
