bitkeeper revision 1.616 (3fbca451cCh4CiAzcPFCijGwNS4Bjg)
Many files:
  Mods to new xclib.
Makefile:
  new file
  Rename: tools/xc/Makefile -> tools/xc/lib/Makefile
rpm.spec:
  Rename: tools/xc/rpm.spec -> tools/xc/lib/rpm.spec
xc.h:
  Rename: tools/xc/xc.h -> tools/xc/lib/xc.h
libxc_private.h:
  Rename: tools/xc/libxc_private.h -> tools/xc/lib/libxc_private.h
libxc_vif.c:
  Rename: tools/xc/libxc_vif.c -> tools/xc/lib/libxc_vif.c
libxc_vbd.c:
  Rename: tools/xc/libxc_vbd.c -> tools/xc/lib/libxc_vbd.c
libxc_private.c:
  Rename: tools/xc/libxc_private.c -> tools/xc/lib/libxc_private.c
libxc_misc.c:
  Rename: tools/xc/libxc_misc.c -> tools/xc/lib/libxc_misc.c
libxc_linux_save.c:
  Rename: tools/xc/libxc_linux_save.c -> tools/xc/lib/libxc_linux_save.c
libxc_linux_restore.c:
  Rename: tools/xc/libxc_linux_restore.c -> tools/xc/lib/libxc_linux_restore.c
libxc_linux_build.c:
  Rename: tools/xc/libxc_linux_build.c -> tools/xc/lib/libxc_linux_build.c
libxc_domain.c:
  Rename: tools/xc/libxc_domain.c -> tools/xc/lib/libxc_domain.c
libxc_bvtsched.c:
  Rename: tools/xc/libxc_bvtsched.c -> tools/xc/lib/libxc_bvtsched.c
Many files:
  mvdir

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -21,20 +21,20 @@ all:
 	$(MAKE) -C balloon
 	$(MAKE) -C control
 	$(MAKE) -C internal
-	$(MAKE) -C libxc
+	$(MAKE) -C xc
 	$(MAKE) -C misc
 
 install: all
 	$(MAKE) -C balloon install
 	$(MAKE) -C control install
 	$(MAKE) -C internal install
-	$(MAKE) -C libxc install
+	$(MAKE) -C xc install
 	$(MAKE) -C misc install
 
 clean:
 	$(MAKE) -C balloon clean
 	$(MAKE) -C control clean
 	$(MAKE) -C internal clean
-	$(MAKE) -C libxc clean
+	$(MAKE) -C xc clean
 	$(MAKE) -C misc clean
 
