bitkeeper revision 1.616.1.1 (3fbd0a530qmhBPZzzak7KZnyTNTggA)
Many files:
  Python wrapper module 'Xc' for libxc.
xc_py.c, setup.py, Makefile:
  new file

--- a/tools/xc/Makefile
+++ b/tools/xc/Makefile
@@ -1,9 +1,12 @@
 
 all:
 	$(MAKE) -C lib
+	$(MAKE) -C py
 
 install:
 	$(MAKE) -C lib install
+	$(MAKE) -C py  install
 
 clean:
-	$(MAKE) -C lib xlean
+	$(MAKE) -C lib clean
+	$(MAKE) -C py  clean
