bitkeeper revision 1.619 (3fbd1860ZTk313gg7K24KrtLF0t_Vg)
Makefile:
  Fix Python makefile to install the wrapper module in lib/python/

--- a/tools/xc/py/Makefile
+++ b/tools/xc/py/Makefile
@@ -3,7 +3,10 @@ all: ../lib/libxc.a
 	python setup.py build
 
 install:
-	# How to install Xc.so ??
+	mkdir -p ../../../../install/lib/python
+	for i in `find . -name 'Xc.so'` ; do                           \
+		cp $$i ../../../../install/lib/python/`basename $$i` ; \
+	done
 
 clean:
 	rm -rf build
