bitkeeper revision 1.621 (3fbd39630uwIiPL4FzOZLfg9bk_Qxg)
Makefile:
  Use the handy install functionality of distutils to do the right thing.

--- a/tools/xc/py/Makefile
+++ b/tools/xc/py/Makefile
@@ -3,10 +3,7 @@ all: ../lib/libxc.a
 	python setup.py build
 
 install:
-	mkdir -p ../../../../install/lib/python
-	for i in `find . -name 'Xc.so'` ; do                           \
-		cp $$i ../../../../install/lib/python/`basename $$i` ; \
-	done
+	python setup.py install
 
 clean:
 	rm -rf build
