bitkeeper revision 1.626 (3fbe3eb1WmztnxBIFxm56r8gAVwZig)
Many files:
  Some fixes. Also now have a new Makefile target 'dist' which installs stuff to local install directory. Target 'install' now actually does what you expect by installing under /usr
xi_stopdom.py:
  Rename: tools/misc/xi_stopdom.py -> tools/examples/xi_stopdom.py
xi_listdoms.py:
  Rename: tools/misc/xi_listdoms.py -> tools/examples/xi_listdoms.py
xi_destroydom.py:
  Rename: tools/misc/xi_destroydom.py -> tools/examples/xi_destroydom.py
xi_createlinuxdom.py:
  Rename: tools/misc/xi_createlinuxdom.py -> tools/examples/xi_createlinuxdom.py

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -27,6 +27,11 @@ install: all
 	$(MAKE) -C xc install
 	$(MAKE) -C misc install
 
+dist: all
+	$(MAKE) -C balloon dist
+	$(MAKE) -C xc dist
+	$(MAKE) -C misc dist
+
 clean:
 	$(MAKE) -C balloon clean
 	$(MAKE) -C xc clean
