--- a/tools/xc/Makefile
+++ b/tools/xc/Makefile
@@ -3,9 +3,13 @@ all:
 	$(MAKE) -C lib
 	$(MAKE) -C py
 
-install:
+install: all
 	$(MAKE) -C lib install
 	$(MAKE) -C py  install
+
+dist: all
+	$(MAKE) -C lib dist
+	$(MAKE) -C py  dist
 
 clean:
 	$(MAKE) -C lib clean
