--- a/tools/xc/py/Makefile
+++ b/tools/xc/py/Makefile
@@ -2,8 +2,14 @@
 all: ../lib/libxc.a
 	python setup.py build
 
-install:
+install: all
 	python setup.py install
+
+dist: all
+	mkdir -p ../../../../install/lib/python
+	for i in `find . -name 'Xc.so'` ; do                           \
+		cp $$i ../../../../install/lib/python/`basename $$i` ; \
+	done
 
 clean:
 	rm -rf build *.pyc *.pyo *.o *.a *~
