--- a/xen/Makefile
+++ b/xen/Makefile
@@ -19,6 +19,11 @@ debug:
 
 install: $(TARGET)
 	gzip -f -9 < $(TARGET) > $(TARGET).gz
+	mkdir -p /boot
+	cp -a $(TARGET).gz /boot
+
+dist: $(TARGET)
+	gzip -f -9 < $(TARGET) > $(TARGET).gz
 	mkdir -p ../../install/boot
 	cp -a $(TARGET).gz ../../install/boot/
 
