--- a/xenolinux-2.4.22-sparse/arch/xeno/Makefile
+++ b/xenolinux-2.4.22-sparse/arch/xeno/Makefile
@@ -96,6 +96,10 @@ bzImage: vmlinux
 	@$(MAKEBOOT) xenolinux.gz
 
 install: bzImage
+	mkdir -p /boot
+	cp -a arch/$(ARCH)/boot/xenolinux.gz /boot/xenolinux.gz
+
+dist: bzImage
 	mkdir -p ../install/boot
 	cp -a arch/$(ARCH)/boot/xenolinux.gz ../install/boot/xenolinux.gz
 
