bitkeeper revision 1.627.1.1 (3fbf4befPIgRjU40eyhadjRuioWcwA)
Many files:
  Lib renames and fixes. Only build shared version of libxc, as the static archive version caused too many problems.
xc_vif.c:
  Rename: tools/xc/lib/libxc_vif.c -> tools/xc/lib/xc_vif.c
xc_vbd.c:
  Rename: tools/xc/lib/libxc_vbd.c -> tools/xc/lib/xc_vbd.c
xc_private.h:
  Rename: tools/xc/lib/libxc_private.h -> tools/xc/lib/xc_private.h
xc_private.c:
  Rename: tools/xc/lib/libxc_private.c -> tools/xc/lib/xc_private.c
xc_misc.c:
  Rename: tools/xc/lib/libxc_misc.c -> tools/xc/lib/xc_misc.c
xc_linux_restore.c:
  Rename: tools/xc/lib/libxc_linux_restore.c -> tools/xc/lib/xc_linux_restore.c
xc_linux_save.c:
  Rename: tools/xc/lib/libxc_linux_save.c -> tools/xc/lib/xc_linux_save.c
xc_linux_build.c:
  Rename: tools/xc/lib/libxc_linux_build.c -> tools/xc/lib/xc_linux_build.c
xc_domain.c:
  Rename: tools/xc/lib/libxc_domain.c -> tools/xc/lib/xc_domain.c
xc_bvtsched.c:
  Rename: tools/xc/lib/libxc_bvtsched.c -> tools/xc/lib/xc_bvtsched.c

--- a/tools/xc/lib/Makefile
+++ b/tools/xc/lib/Makefile
@@ -4,12 +4,11 @@ CFLAGS   = -c -Wall -O3
 CFLAGS  += -I../../../xen/include -I../../../xenolinux-sparse/include
 
 HDRS     = $(wildcard *.h)
-OBJS     = $(patsubst %.c,%.o,$(wildcard libxc_*.c))
+OBJS     = $(patsubst %.c,%.o,$(wildcard *.c))
 
-LIBS     = libxc.a libxc.so
+LIB      = libxc.so
 
-all: check-for-zlib $(LIBS)
-	ranlib libxc.a
+all: check-for-zlib $(LIB)
 
 check-for-zlib:
 	@if [ ! -e /usr/include/zlib.h ]; then \
@@ -22,21 +21,21 @@ check-for-zlib:
 install: all
 	mkdir -p /usr/lib
 	mkdir -p /usr/include
-	cp -a $(LIBS) /usr/lib
-	for i in $(LIBS); do chmod 755 /usr/bin/$i ; done
+	cp -a $(LIB) /usr/lib
+	for i in $(LIB); do chmod 755 /usr/bin/$i ; done
 	cp -a xc.h /usr/include
 	chmod 644 /usr/include/xc.h
 
 dist: all
 	mkdir -p ../../../../install/lib
 	mkdir -p ../../../../install/include
-	cp -a $(LIBS) ../../../../install/lib
-	for i in $(LIBS); do chmod 755 ../../../../install/bin/$i ; done
+	cp -a $(LIB) ../../../../install/lib
+	for i in $(LIB); do chmod 755 ../../../../install/bin/$i ; done
 	cp -a xc.h ../../../../install/include
 	chmod 644 ../../../../install/include/xc.h
 
 clean:
-	$(RM) *.a *.so *.o *.rpm $(LIBS)
+	$(RM) *.a *.so *.o *.rpm $(LIB)
 
 rpm: all
 	rm -rf staging
@@ -49,8 +48,6 @@ rpm: all
 
 libxc.so: $(OBJS)
 	$(LD) -shared -o $@ $^ -lz
-
-libxc.a: libxc.a($(OBJS))
 
 %.o: %.c $(HDRS) Makefile
 	$(CC) $(CFLAGS) -o $@ $<
