bitkeeper revision 1.641 (3fcdb656yM6DlMdwk-janNkBhdceiQ)
Many files:
  new file
megaraid.c, Makefile, Rules.mk:
  New Fusion driver.

--- a/xen/drivers/Makefile
+++ b/xen/drivers/Makefile
@@ -7,6 +7,7 @@ default:
 	$(MAKE) -C cdrom
 	$(MAKE) -C ide
 	$(MAKE) -C scsi
+	$(MAKE) -C message/fusion
 
 clean:
 	$(MAKE) -C char clean
@@ -16,3 +17,4 @@ clean:
 	$(MAKE) -C cdrom clean
 	$(MAKE) -C ide clean
 	$(MAKE) -C scsi clean
+	$(MAKE) -C message/fusion clean
