bitkeeper revision 1.650 (3fe1834bi7fbj-x6TfVgbIh12F7c6g)
Makefile:
  Makefile bug fixed.

--- a/tools/xc/lib/Makefile
+++ b/tools/xc/lib/Makefile
@@ -22,7 +22,7 @@ install: all
 	mkdir -p /usr/lib
 	mkdir -p /usr/include
 	cp -a $(LIB) /usr/lib
-	for i in $(LIB); do chmod 755 /usr/bin/$i ; done
+	chmod 755 /usr/bin/$(LIB)
 	cp -a xc.h /usr/include
 	chmod 644 /usr/include/xc.h
 
@@ -30,7 +30,7 @@ dist: all
 	mkdir -p ../../../../install/lib
 	mkdir -p ../../../../install/include
 	cp -a $(LIB) ../../../../install/lib
-	for i in $(LIB); do chmod 755 ../../../../install/bin/$i ; done
+	chmod 755 ../../../../install/bin/$(LIB)
 	cp -a xc.h ../../../../install/include
 	chmod 644 ../../../../install/include/xc.h
 
