--- a/tools/xc/lib/Makefile
+++ b/tools/xc/lib/Makefile
@@ -21,17 +21,17 @@ check-for-zlib:
 install: all
 	mkdir -p /usr/lib
 	mkdir -p /usr/include
-	cp -a $(LIB) /usr/lib
+	cp $(LIB) /usr/lib
 	chmod 755 /usr/lib/$(LIB)
-	cp -a xc.h /usr/include
+	cp xc.h /usr/include
 	chmod 644 /usr/include/xc.h
 
 dist: all
 	mkdir -p ../../../../install/lib
 	mkdir -p ../../../../install/include
-	cp -a $(LIB) ../../../../install/lib
+	cp $(LIB) ../../../../install/lib
 	chmod 755 ../../../../install/lib/$(LIB)
-	cp -a xc.h ../../../../install/include
+	cp xc.h ../../../../install/include
 	chmod 644 ../../../../install/include/xc.h
 
 clean:
