bitkeeper revision 1.700 (401d7e17TsVIdmq0QNgdFLXJHFN1kg)
transfer new domain tools and readmes from the 1.2 tree

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -21,19 +21,23 @@ all:
 	$(MAKE) -C balloon
 	$(MAKE) -C xc
 	$(MAKE) -C misc
+	$(MAKE) -C examples
 
 install: all
 	$(MAKE) -C balloon install
 	$(MAKE) -C xc install
 	$(MAKE) -C misc install
+	$(MAKE) -C examples install
 
 dist: all
 	$(MAKE) -C balloon dist
 	$(MAKE) -C xc dist
 	$(MAKE) -C misc dist
+	$(MAKE) -C examples dist
 
 clean:
 	$(MAKE) -C balloon clean
 	$(MAKE) -C xc clean
 	$(MAKE) -C misc clean
+	$(MAKE) -C examples clean
 
