--- a/tools/xc/py/Makefile
+++ b/tools/xc/py/Makefile
@@ -10,6 +10,7 @@ dist: all
 	for i in `find . -name 'Xc.so'` ; do                           \
 		cp $$i ../../../../install/lib/python/`basename $$i` ; \
 	done
-
+	python -c 'import py_compile, sys; py_compile.compile("XenoUtil.py")'
+	cp XenoUtil.py* ../../../../install/lib/python
 clean:
 	rm -rf build *.pyc *.pyo *.o *.a *~
