--- a/tools/xc/py/Makefile
+++ b/tools/xc/py/Makefile
@@ -8,9 +8,10 @@ install: all
 dist: all
 	mkdir -p ../../../../install/lib/python
 	for i in `find . -name 'Xc.so'` ; do                           \
-		cp $$i ../../../../install/lib/python/`basename $$i` ; \
+		install --mode=755 $$i ../../../../install/lib/python/`basename $$i` ; \
 	done
 	python -c 'import py_compile, sys; py_compile.compile("XenoUtil.py")'
-	cp XenoUtil.py* ../../../../install/lib/python
+	install --mode=444 XenoUtil.py ../../../../install/lib/python
+	install --mode=644 XenoUtil.pyc ../../../../install/lib/python
 clean:
 	rm -rf build *.pyc *.pyo *.o *.a *~
