bitkeeper revision 1.723 (402c9d32Wi_CDhKbGEWsHmH2qb2VfQ)
fix makefile for nsplitd

--- a/tools/nsplitd/Makefile
+++ b/tools/nsplitd/Makefile
@@ -1,11 +1,25 @@
-ROOT	= ..
 
+CC       = gcc
+CFLAGS  = -Wall -g -O3
 CFILES	= $(wildcard *.c)
+
+HDRS     = $(wildcard *.h)
+OBJS     = $(patsubst %.c,%.o,$(wildcard *.c))
 
 INSTALL_BINS := nsplitd
 
-include $(ROOT)/mk/rules.mk
+all: nsplitd
 
 nsplitd: $(OBJS)
 	$(CC) $(CFLAGS) -o nsplitd $(OBJS)
 
+install: all
+
+dist: all
+
+clean:
+	$(RM) *.o $(INSTALL_BINS)
+
+
+%.o: %.c $(HDRS) Makefile
+	$(CC) $(CFLAGS) -c -o $@ $<
