bitkeeper revision 1.734 (4034eab5pHmnxsktQQEh03xZcwCoJw)
cciss fix

--- a/xen/drivers/block/Makefile
+++ b/xen/drivers/block/Makefile
@@ -1,6 +1,14 @@
 
 include $(BASEDIR)/Rules.mk
 
+
+# SMH: need to ensure cciss init function called /after/ generic blkdev 
+# stuff in ll_rw_blk etc. Linux barking link-order invocation of init 
+# functions means we need to explicitly order things here. 
+OBJS := blkpg.o elevator.o ll_rw_blk.o xen_vbd.o genhd.o xen_block.o 
+OBJS += cciss.o cciss_scsi.o
+
+
 default: $(OBJS)
 	$(LD) -r -o driver.o $(OBJS)
 
