bitkeeper revision 1.743 (403b37106MV2R0Wr2iE98QHJWFPRMw)
trace.h, dom0_ops.h, trace.c, setup.c, xentrace.c, Makefile:
  Cleanups to new trace code.

--- a/tools/xentrace/Makefile
+++ b/tools/xentrace/Makefile
@@ -29,4 +29,4 @@ clean:
 	$(RM) *.a *.so *.o *.rpm $(BIN)
 
 %: %.c $(HDRS) Makefile
-	$(CC) $(CFLAGS) -o $@ $< -lxc
+	$(CC) $(CFLAGS) -o $@ $< -L../xc/lib -lxc
